--- a/styles_parts.css
+++ b/styles_parts.css
@@ -35,12 +35,18 @@
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   }
-  .profile-img {
+  /* .profile-img {
     display: block;
     width: 150px;
     height: 150px;
     margin: 0 auto;
     border-radius: 50%;
+    object-fit: cover;
+  } */
+
+  .profile-img {
+    display: block;
+    margin: 0 auto;
     object-fit: cover;
   }
   
