--- a/styles_parts.css
+++ b/styles_parts.css
@@ -10,6 +10,12 @@
     color: #333;
     background-color: #f5f5f5;
     line-height: 1.6;
+
+
+    background-image: url('image.JPG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
   
   header {
