--- a/styles_parts.css
+++ b/styles_parts.css
@@ -12,7 +12,7 @@
     line-height: 1.6;
 
 
-    background-image: url('image.JPG');
+    background-image: url('background.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
