--- a/styles_parts.css
+++ b/styles_parts.css
@@ -77,6 +77,7 @@
     margin-bottom: 1rem;
     border-bottom: 2px solid #4c4c4c;
     padding-bottom: 0.5rem;
+    text-align: center;
   }
   
   .job {
