--- a/styles_parts.css
+++ b/styles_parts.css
@@ -11,8 +11,8 @@
     background-color: #f5f5f5;
     line-height: 1.6;
 
-    background-image: url('background.JPG');
-    background-repeat: no-repeat;
+    background-image: url('background.JPG') !important;
+    background-repeat: repeat;
     background-size: cover;
     background-position: center;
   }
