--- a/styles_parts.css
+++ b/styles_parts.css
@@ -11,7 +11,7 @@
     background-color: #f5f5f5;
     line-height: 1.6;
 
-    background-image: url('background.JPG') !important;
+    background-image: url('background.jpg') !important;
     background-repeat: repeat;
     background-size: cover;
     background-position: center;
