--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,77 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+body.dark-mode {
+    margin: 0;
+    padding: 0px;
+    background-color: #000000;
+    padding-left: 80px;
+    font-family: 'Lato', sans-serif;
+}
+
+
+
+
+.darkmode-container {
+    display: flex;
+    align-items: center;
+}
+
+
+label {
+    width: 50px;
+    height: 24px;
+    position: relative;
+    display: block;
+    background: #c9c6c6;
+    border-radius: 200px;
+    top: 3px;
+    box-shadow: inset 0px 5px 15px rgba(0,0,0,0,4), inset 0px -5px 15px rgba(255,255,255,0.4);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+label:after {
+    content: "";
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    background: linear-gradient(180deg, #ffcc89, #d8860b);
+    border-radius: 8px;
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+label:active:after {
+    width: 32px;
+}
+
+input {
+    width:5px;
+    height: 0;
+    visibility: hidden;
+}
+
+input:checked + label {
+    background: #242424;
+}
+
+input:checked + label:after {
+    left: 46px;
+    transform: translateX(-100%);
+    background: linear-gradient(180deg, #777, #3a3a3a);
+}
+
+
+
+
+
+
+
 h1 {
-    font-size: 32px;
+    font-size: 35px;
     text-align: left;
     padding-top: 50px;
     color: #6d3b3b;
@@ -19,11 +88,13 @@ h1 {
 }
 
 .nav {
+    display: flex;
+    align-items: center;
     color: #3f1010;
     font-size: 21px;
     text-align: left;
     margin-top: 10px;
-}
+  }
 
 .nav a {
     color: #3f1010;
@@ -38,7 +109,7 @@ h1 {
 
 .about-me {
     display: flex;
-    align-items: center; /* Vertically centers the image and text */
+    align-items: center;
     text-align: justify;
     max-width: 1200px;
     font-size: 18px;
