--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     padding: 0px;
     background-color: #f0f0f0;
     color: #6d3b3b;
-    padding-left: 80px;
+    /* padding-left: 80px; */
     font-family: 'Lato', sans-serif;
 }
 
