--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 body {
     margin: 0;
     padding: 20px;
-    background-color: #f0f0f0;
-    color: #6d3b3b;
+    background-color: #121212;
+    color: #BDBDBD;
     font-family: 'Lato', sans-serif;
 }
 
-body.dark-mode {
+body.white-mode {
     margin: 0;
     padding: 20px;
-    background-color: #121212;
-    color: #BDBDBD;
+    background-color: #f0f0f0;
+    color: #6d3b3b;
     font-family: 'Lato', sans-serif;
 }
 
@@ -34,7 +34,7 @@ h1 {
   }
 
 .nav a {
-    color: #3f1010;
+    color: #636363;
     text-decoration: none;
     margin-right: 3%;
     font-size: 24px;
@@ -44,8 +44,8 @@ h1 {
     text-decoration: underline;
 }
 
-body.dark-mode .nav a {
-    color: #636363;
+body.white-mode .nav a {
+    color: #3f1010;
 }
 
 .about-me {
@@ -143,7 +143,7 @@ label {
     height: 24px;
     position: relative;
     display: block;
-    background: #c9c6c6;
+    background: #4e4949;
     border-radius: 200px;
     top: 3px;
     box-shadow: inset 0px 5px 15px rgba(0,0,0,0,4), inset 0px -5px 15px rgba(255,255,255,0.4);
@@ -158,9 +158,9 @@ label:after {
     position: absolute;
     top: 4px;
     left: 4px;
-    background: linear-gradient(180deg, #8f8271, #7e5c29);
+    background: linear-gradient(180deg, #8d8b89, #4c4b4a);
     border-radius: 8px;
-    box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+    box-shadow: 0px 5px 10px rgba(249, 63, 63, 0.2);
     transition: 0.3s;
 }
 
@@ -175,11 +175,11 @@ input {
 }
 
 input:checked + label {
-    background: #242424;
+    background: #cecaca;
 }
 
 input:checked + label:after {
     left: 46px;
     transform: translateX(-100%);
-    background: linear-gradient(180deg, #777, #3a3a3a);
+    background: linear-gradient(180deg, #896363, #7b5a51);
 }
