--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,10 @@ body {
 body.white-mode {
     margin: 0;
     padding: 20px;
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
+    /* background-color: hsl(0, 19%, 93%); */
+    background-color: hsl(40, 63%, 93%);
+    /* background-color: hsl(35, 24%, 76%); */
     color: #6d3b3b;
     font-family: 'Lato', sans-serif;
 }
@@ -158,9 +161,8 @@ label:after {
     position: absolute;
     top: 4px;
     left: 4px;
-    background: linear-gradient(180deg, #8d8b89, #4c4b4a);
+    background: #8d8b89;
     border-radius: 8px;
-    box-shadow: 0px 5px 10px rgba(249, 63, 63, 0.2);
     transition: 0.3s;
 }
 
@@ -175,11 +177,12 @@ input {
 }
 
 input:checked + label {
-    background: #cecaca;
+    /* background: #cecaca; */
+    background: #cdd0c3;
 }
 
 input:checked + label:after {
     left: 46px;
     transform: translateX(-100%);
-    background: linear-gradient(180deg, #896363, #7b5a51);
+    background: #6d3b3b;
 }
