--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,3 @@
-body {
-    margin: 0;
-    padding: 20px;
-    background-color: #121212;
-    color: #BDBDBD;
-    font-family: 'Lato', sans-serif;
-}
-
-body.white-mode {
-    margin: 0;
-    padding: 20px;
-    background-color: hsl(40, 63%, 93%);
-    color: #6d3b3b;
-    font-family: 'Lato', sans-serif;
-}
-
-h1 {
-    font-size: 38px;
-    text-align: left;
-    padding-top: 50px;
-}
-
-.container {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-.nav {
-    display: flex;
-    align-items: center;
-    font-size: 21px;
-    text-align: left;
-    margin-top: 10px;
-  }
-
-.nav a {
-    color: #636363;
-    text-decoration: none;
-    margin-right: 3%;
-    font-size: 24px;
-}
-
-.nav a:hover {
-    text-decoration: underline;
-}
-
-body.white-mode .nav a {
-    color: #3f1010;
-}
-
 .about-me {
     display: flex;
     align-items: center;
@@ -89,9 +39,6 @@ body.white-mode .nav a {
 }
 
 
-
-
-
 .generator {
     display: flex;
     flex-direction: row;
@@ -101,7 +48,7 @@ body.white-mode .nav a {
     margin: 0 auto;
     text-align: justify;
     padding: 20px;
-    padding-top: 50px;
+    padding-top: 25px;
     padding-bottom: 30px;
 }
 
@@ -195,6 +142,97 @@ transform: scale(0.95);
     color: #6d3b3b;
     font-size: 16px;
 }
+
+
+
+
+
+
+
+.dataset-switch {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 20px;
+    position: relative;
+}
+
+.nizami-button {
+    width: 100px;
+    height: 35px;
+    margin: 0 auto;
+    margin-right: 20px;
+    border-radius: 15px;
+    border-style:none;
+    background-color: #2b2a2a;
+    color: #BDBDBD;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.shakespeare-button {
+    width: 100px;
+    height: 35px;
+    margin: 0 auto;
+    margin-left: 0px;
+    border-radius: 15px;
+    border-style:none;
+    background-color: #2b2a2a;
+    color: #BDBDBD;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.nizami-button:hover {
+    background-color: #95999d;
+    color: #070707;
+}
+
+.shakespeare-button:hover {
+    background-color: #95999d;
+    color: #070707;
+}
+
+/* .generate_button:active {
+    transform: scale(0.95);
+    }   */
+
+    
+/* 
+.nizami-button.white-mode {
+    background-color: hsl(42, 20%, 83%);
+    color: #6d3b3b;
+}
+
+.shakespeare-button.white-mode {
+    background-color: hsl(42, 20%, 83%);
+    color: #6d3b3b;
+} */
+
+
+
+
+.division-text {
+    width: 60%;
+    align-items: center; 
+    text-align: center; 
+    border-bottom: 1px solid #545151; 
+    color: #676464;
+    line-height: 0.1em;
+    margin: 0 auto;
+    padding-top: 50px;
+ } 
+  
+.division-text span { 
+    background:#121212; 
+    padding:0 10px; 
+}
+
+.dt_g {
+    padding-top: 20px;
+}
+
 
 
 
