default dataset selection

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,13 +111,20 @@ transform: scale(0.95);
     background-color: #95999d;
     color: #070707;
     cursor:default;
-    }  
+}
     
 
 
 .generate_button.white-mode {
     background-color: hsl(42, 20%, 83%);
     color: #6d3b3b;
+}
+
+.generate_button.white-mode:disabled {
+    transform: scale(0.98);
+    background-color: #a0a8b0;
+    color: #070707;
+    cursor:default;
 }
 
 
@@ -220,7 +227,19 @@ transform: scale(0.95);
     color: #6d3b3b;
 } 
 
+.nizami-button.white-mode:disabled {
+    transform: scale(0.98);
+    background-color: #a0a8b0;
+    color: #070707;
+    cursor:default;
+}
 
+.shakespeare-button.white-mode:disabled {
+    transform: scale(0.98);
+    background-color: #a0a8b0;
+    color: #070707;
+    cursor:default;
+}
 
 
 .division-text {
