--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,7 @@ transform: scale(0.95);
     color: #BDBDBD;
     font-size: 14px;
     cursor: pointer;
+    text-align: center;
 }
 
 .nizami-button:hover {
