--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,7 @@ transform: scale(0.95);
     font-size: 14px;
     cursor: pointer;
     text-align: center;
+    padding: 0px;
 }
 
 .nizami-button:hover {
