--- a/css/styles.css
+++ b/css/styles.css
@@ -7,42 +7,6 @@
     margin-top: 20px;
 }
 
-.contact {
-    display: flex;
-    align-items: center;
-    text-align: justify;
-    justify-content: center;
-    max-width: 1200px;
-    font-size: 18px;
-    /* margin-top: 20px; */
-}
-
-.contact a {
-    color: hsl(40, 63%, 93%);
-    /* padding-left: 20px; */
-    text-decoration: none;
-
-}
-
-
-
-
-.contact.white-mode a {
-    color: #3f1010;
-}
-
-
-
-
-.contact p {
-    padding: 10px;
-}
-
-.contact i {
-    padding: 15px;
-}
-
-
 .contactme {
     display: flex;
     align-items: center;
@@ -50,7 +14,32 @@
     max-width: 1200px;
     font-size: 18px;
     margin-top: 20px;
-    /* padding-left: 20px; */
+}
+
+.contact {
+    display: flex;
+    align-items: center;
+    text-align: justify;
+    max-width: 1200px;
+    font-size: 18px;
+    justify-content: center;
+}
+
+.contact a {
+    color: hsl(40, 63%, 93%);
+    text-decoration: none;
+}
+
+.contact.white-mode a {
+    color: #3f1010;
+}
+
+.contact p {
+    padding: 10px;
+}
+
+.contact i {
+    padding: 15px;
 }
 
 .profile-picture {
@@ -76,7 +65,6 @@
     object-fit: cover;
     overflow: hidden;
     justify-content: center;
-    /* object-position: center; */
     padding-top: 15px;
     height: 120px;
 }
@@ -148,49 +136,6 @@
     outline: none;
 }
 
-.generate_button {
-    width: 100px;
-    margin: 0 auto;
-    margin-left: 0px;
-    border-radius: 15px;
-    border-style:none;
-    background-color: #2b2a2a;
-    color: #BDBDBD;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-.generate_button:hover {
-    background-color: #95999d;
-    color: #070707;
-}
-
-.generate_button:active {
-transform: scale(0.95);
-}  
-
-.generate_button:disabled {
-    transform: scale(0.98);
-    background-color: #95999d;
-    color: #070707;
-    cursor:default;
-}
-    
-
-
-.generate_button.white-mode {
-    background-color: hsl(42, 20%, 83%);
-    color: #6d3b3b;
-}
-
-.generate_button.white-mode:disabled {
-    transform: scale(0.98);
-    background-color: #a0a8b0;
-    color: #070707;
-    cursor:default;
-}
-
-
 .output_box {
     max-width: 800px;
     margin: 0 auto;
@@ -213,13 +158,7 @@ transform: scale(0.95);
     font-size: 16px;
 }
 
-
-
-
-
-
-
-.dataset-switch {
+.switch {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -228,24 +167,10 @@ transform: scale(0.95);
     position: relative;
 }
 
-.nizami-button {
+.button {
     width: 100px;
     height: 35px;
     margin: 0 auto;
-    margin-right: 20px;
-    border-radius: 15px;
-    border-style:none;
-    background-color: #2b2a2a;
-    color: #BDBDBD;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-.shakespeare-button {
-    width: 100px;
-    height: 35px;
-    margin: 0 auto;
-    margin-left: 0px;
     border-radius: 15px;
     border-style:none;
     background-color: #2b2a2a;
@@ -256,155 +181,54 @@ transform: scale(0.95);
     padding: 0px;
 }
 
-.nizami-button:hover {
-    background-color: #95999d;
-    color: #070707;
-}
-
-.shakespeare-button:hover {
-    background-color: #95999d;
-    color: #070707;
-}
-
-.nizami-button:disabled {
-    transform: scale(0.98);
-    background-color: #95999d;
-    color: #070707;
-    cursor:default;
-    }  
-
-.shakespeare-button:disabled {
-    transform: scale(0.98);
-    background-color: #95999d;
-    color: #070707;
-    cursor:default;
-    }  
-
-    
-
-.nizami-button.white-mode {
-    background-color: hsl(42, 20%, 83%);
-    color: #6d3b3b;
-}
-
-.shakespeare-button.white-mode {
-    background-color: hsl(42, 20%, 83%);
-    color: #6d3b3b;
-} 
-
-.nizami-button.white-mode:disabled {
-    transform: scale(0.98);
-    background-color: #a0a8b0;
-    color: #070707;
-    cursor:default;
-}
-
-.shakespeare-button.white-mode:disabled {
-    transform: scale(0.98);
-    background-color: #a0a8b0;
-    color: #070707;
-    cursor:default;
-}
-
-
-
-
-
-
-.model-switch {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: 20px;
-    position: relative;
-}
-
-.bigram-button {
-    width: 100px;
-    height: 35px;
-    margin: 0 auto;
+.button.left {
     margin-right: 20px;
-    border-radius: 15px;
-    border-style:none;
-    background-color: #2b2a2a;
-    color: #BDBDBD;
-    font-size: 14px;
-    cursor: pointer;
 }
 
-.lstm-button {
-    width: 100px;
-    height: 35px;
-    margin: 0 auto;
+.button.right {
+    margin-left: 0px
+}
+
+.button.gen {
+    height: auto;
     margin-left: 0px;
-    border-radius: 15px;
-    border-style:none;
-    background-color: #2b2a2a;
-    color: #BDBDBD;
-    font-size: 14px;
-    cursor: pointer;
 }
 
-.bigram-button:hover {
+.button.gen:active {
+    transform: scale(0.95);
+}  
+
+
+.button:hover {
     background-color: #95999d;
     color: #070707;
 }
 
-.lstm-button:hover {
-    background-color: #95999d;
+.button.white-mode:hover {
+    background-color: #a0a8b0;
     color: #070707;
 }
 
-.bigram-button:disabled {
+.button:disabled {
     transform: scale(0.98);
     background-color: #95999d;
     color: #070707;
     cursor:default;
-    }  
+    }    
 
-.lstm-button:disabled {
-    transform: scale(0.98);
-    background-color: #95999d;
-    color: #070707;
-    cursor:default;
-    }  
-
-    
-
-.bigram-button.white-mode {
-    background-color: hsl(42, 20%, 83%);
+.button.white-mode {
+    background-color: hsl(46, 20%, 83%);
     color: #6d3b3b;
 }
 
-.lstm-button.white-mode {
-    background-color: hsl(42, 20%, 83%);
-    color: #6d3b3b;
-} 
-
-.bigram-button.white-mode:disabled {
+.button.white-mode:disabled {
     transform: scale(0.98);
     background-color: #a0a8b0;
     color: #070707;
     cursor:default;
 }
 
-.lstm-button.white-mode:disabled {
-    transform: scale(0.98);
-    background-color: #a0a8b0;
-    color: #070707;
-    cursor:default;
-}
-
-
-
-
-
-
-
-
-
-.division-text {
+.dt {
     width: 60%;
     align-items: center; 
     text-align: center; 
@@ -413,34 +237,21 @@ transform: scale(0.95);
     line-height: 0.1em;
     margin: 0 auto;
     padding-top: 50px;
- } 
-  
-.division-text span { 
+    padding-top: 20px;
+}
+
+.dt.top{
+    padding-top: 50px;
+}
+
+.dt span {
     background:#121212; 
     padding:0 10px; 
 }
 
-.dt_g {
-    padding-top: 20px;
-}
-
-.dt_ds {
-    padding-top: 20px;
-}
-
-.dt_ds.white-mode span {
+.dt.white-mode span {
     background:hsl(40, 63%, 93%);
 }
-
-.dt_g.white-mode span {
-    background:hsl(40, 63%, 93%);
-}
-
-.dt_m.white-mode span {
-    background:hsl(40, 63%, 93%);
-}
-
-
 
 
 @media (max-width: 768px) {
@@ -530,7 +341,6 @@ input {
 }
 
 input:checked + label {
-    /* background: #cecaca; */
     background: #cdd0c3;
 }
 
