--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,11 @@
       flex-direction: column;
       align-items: center;
     }
+
+    .content.contact {
+        flex-direction: row;
+        
+    }
   
     .profile-picture {
       margin-left: 0;
@@ -280,6 +285,9 @@
         max-height: calc(100vh - 450px);
     }
   }
+
+
+
 
 .darkmode-container {
     display: flex;
