--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -7,11 +7,8 @@ body {
 }
 
 body.white-mode {
-    margin: 0;
-    padding: 20px;
     background-color: hsl(40, 63%, 93%);
     color: #6d3b3b;
-    font-family: 'Lato', sans-serif;
 }
 
 h1 {
@@ -30,7 +27,8 @@ h1 {
     color: #ffffff;
 }
 
-.container a:hover {
+.container a:hover,
+.nav a:hover {
     text-decoration: underline;
 }
 
@@ -51,12 +49,4 @@ h1 {
     text-decoration: none;
     margin-right: 3%;
     font-size: 24px;
-}
-
-.nav a:hover {
-    text-decoration: underline;
-}
-
-body.white-mode .nav a {
-    color: #3f1010;
 }
