--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
 .content {
-    display: flex;
     align-items: center;
     text-align: justify;
     max-width: 1200px;
     font-size: 18px;
     margin-top: 20px;
+}
+
+.content.profile {
+    display: flex;
 }
 
 .content.contact {
