--- a/movie/movie.css
+++ b/movie/movie.css
@@ -13,7 +13,7 @@ html{
     background-color: #95999d;
     color: #000;
     width: 400px;
-    height: 650px;
+    height: 660px;
     border: 2px solid #000;
     border-radius: 20px;
     margin: 50px;
@@ -22,12 +22,18 @@ html{
     align-items: center;
 }
 
+.middle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .genre {
     padding-left: 25px;
 }
 
 .sliders {
-    padding-left: 60px;
+    padding-left: 40px;
 }
 
 .slider {
@@ -39,13 +45,35 @@ html{
 .values {
     display: inline;
     vertical-align: middle;
-    padding-left: 15px;
-    /* align-items: center; */
-    /* height: 2000px; */
+    padding-left: 25px;
 }
 
 .value {
     display:inline-block;
     padding-top: 8.2px;
     padding-bottom: 8.3px;
+}
+
+
+.button {
+    width: 120px;
+    height: 80px;
+    margin: 0 auto;
+    border-radius: 15px;
+    border-style:none;
+    background-color: #2b2a2a;
+    color: #BDBDBD;
+    font-size: 18px;
+    cursor: pointer;
+    text-align: center;
+    padding: 0px;
+}
+
+.button.gen:active {
+    transform: scale(0.95);
+}  
+
+.button:hover {
+    background-color: #95999d;
+    color: #070707;
 }
