--- a/movie/movie.css
+++ b/movie/movie.css
@@ -7,6 +7,7 @@ html{
 
 .movie_container {
     display: flex;
+    flex-direction: row;
 }
 
 .box {
@@ -112,4 +113,11 @@ html{
     padding-bottom: 5px;
     color: rgb(109, 68, 24);
     margin: 0;
+}
+
+
+@media (max-width: 768px) {
+    .movie_container {
+        flex-direction: column;
+    }
 }
