--- a/movie/movie.css
+++ b/movie/movie.css
@@ -1,20 +1,20 @@
 html{
-    /* height: 100%; */
+    height: 100%;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
 }
-/* 
+
 .movie_container {
     display: flex;
     flex-direction: row;
     overflow: auto;
-} */
+}
 
 .box {
     background-color: #95999d;
     color: #000;
-    width: 400px;
+    width: 40px;
     height: 660px;
     border: 2px solid #000;
     border-radius: 20px;
@@ -22,7 +22,6 @@ html{
 
     display: flex;
     align-items: center;
-    /* height: auto; */
 }
 
 .middle {
