--- a/movie/movie.css
+++ b/movie/movie.css
@@ -14,7 +14,7 @@ html{
 .box {
     background-color: #95999d;
     color: #000;
-    width: 350px;
+    width: 400px;
     height: 660px;
     border: 2px solid #000;
     border-radius: 20px;
@@ -124,6 +124,16 @@ html{
 @media (max-width: 768px) {
     html {
         height:auto;
+    }
+    .box {
+        width: 350px;
+    }
+    
+    .sliders {
+        padding-left: 25px;
+    }
+    .slider {
+        width: 140px;
     }
     body {
         display: block;
