--- a/movie/movie.css
+++ b/movie/movie.css
@@ -8,7 +8,7 @@ html{
 .movie_container {
     display: flex;
     flex-direction: row;
-    overflow: auto;
+    /* overflow: auto; */
 }
 
 .box {
@@ -16,7 +16,7 @@ html{
     color: #000;
     width: 400px;
     height: 660px;
-    border: 2px solid #000;
+    /* border: 2px solid #000; */
     border-radius: 20px;
     margin: 0px;
 
@@ -34,25 +34,43 @@ html{
     justify-content: center;
 }
 
+.genres {
+    height: 660px;
+    align-items: center;
+    justify-content: center;
+}
+
 .genre {
     padding-left: 25px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .sliders {
+    display: flex;
+    flex-direction: column;
+    /* height: 100vh; */
     padding-left: 35px;
+    height: 660px;
+    /* align-items: center; */
+    /* justify-content: center; */
 }
 
 .slider {
     width: 180px;
-    padding-top: 6.6px;
-    padding-bottom: 6.6px;
+    /* height: 20px; */
+    margin: 0px;
+    padding-top: 8.2px;
+    padding-bottom: 8.2px;
 }
 
 .values {
-    display: inline;
+    display: flex;
+    flex-direction: column;
     vertical-align: middle;
-    padding-left: 0px;
+    padding-left: 25px;
     padding-right: 15px;
+    height: 660px;
 }
 
 .value {
