--- a/movie/movie.css
+++ b/movie/movie.css
@@ -48,18 +48,22 @@ html{
 
 .sliders {
     display: flex;
+    flex-flow: row wrap;
     flex-direction: column;
-    /* height: 100vh; */
+    display: inline-block;
+    height: 100%;
     padding-left: 35px;
     height: 660px;
-    /* align-items: center; */
-    /* justify-content: center; */
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    text-align: center;
 }
 
 .slider {
     width: 180px;
     /* height: 20px; */
-    margin: 0px;
+    margin: auto;
     padding-top: 8.2px;
     padding-bottom: 8.2px;
 }
