--- a/movie/movie.css
+++ b/movie/movie.css
@@ -8,7 +8,6 @@ html{
 .movie_container {
     display: flex;
     flex-direction: row;
-    /* overflow: auto; */
 }
 
 .box {
@@ -16,7 +15,6 @@ html{
     color: #000;
     width: 400px;
     height: 660px;
-    /* border: 2px solid #000; */
     border-radius: 20px;
     margin: 0px;
 
@@ -95,41 +93,38 @@ html{
 
 .outputs {
     width: 400px;
+    height: 620px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .outbox {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2px;
 }
 
 .movie_name {
-    width: 220px;
-    padding-left: 0px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    margin:3px;
+    width: 200px;
 }
 
 .rating {
     width: 20px;
     padding-left: 40px;
-    padding-bottom: 5px;
     color: rgb(109, 68, 24);
-    margin: 0;
 }
 
 .align {
     width: 20px;
     padding-left: 20px;
-    padding-bottom: 5px;
     color: rgb(109, 68, 24);
-    margin: 0;
 }
 
 .index {
-    padding-right: 3px;
+    padding-right: 5px;
+    width: 20px;
 }
 
 @media (max-width: 768px) {
