--- a/movie/movie.css
+++ b/movie/movie.css
@@ -139,9 +139,9 @@ html{
     }
     .outputs {
         align-items: center;
-        height: 660px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        height: 630px;
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
     .outbox {
         width: 350px;
@@ -154,12 +154,19 @@ html{
         padding-left: 20px;
     }
     .rating {
+        width: 55px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         padding-left: 20px;
-        padding-right: 35px;
+        padding-right: 10px;
     }
     .align {
-        padding-right: 20px;
-        padding-left: 10px;
+        padding-left: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 45px;
     }
     .slider {
         width: 140px;
